# RustNet-main

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  backup.sh  build.bat  build.sh  docker-compose.yml  restore.sh  rustnet.service
client/: Cargo.toml  bot_token.txt.example  build.rs  c2_address.txt  c2_address.txt.example
client/src/: attack_methods.rs  main.rs
docs/: BOT_SETUP.md  FILE_ORGANIZATION.md  README.md
docs/guides/: BUILD.md  BUILDING_FOR_WSL.md
server/: ANALYSIS_REPORT.md  ANALYSIS_REPORT_V2.md  Cargo.toml
server/config/: rustnet.db  server.example.toml  server.toml
server/data/: gif.py
server/data/gifs/: crow.tfx  ded.tfx  dedsec.tfx
server/src/: dynamic_menus.rs  main.rs
server/src/modules/: attack_manager.rs  auth.rs  bot_manager.rs  client_manager.rs  config.rs  connection_handler.rs  database.rs  error.rs  mod.rs  rate_limiter.rs  state.rs  tls.rs  validation.rs
server/src/modules/commands/: admin.rs  attack.rs  general.rs  impls.rs  mod.rs  owner.rs  registry.rs  theme.rs  ui.rs
