[workspace]
members = ["server", "client"]
resolver = "2"
[workspace.dependencies]
tokio = { version = "1.43", features = ["full", "fs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.0"
rcgen = { version = "0.12", features = ["pem", "ring"] }
time = { version = "0.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5"
password-hash = "0.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
num_cpus = "1.16"
async-trait = "0.1"
