[package]
name = "rustnet-client"
version = "0.1.0"
edition = "2021"
authors = ["RustNet Contributors"]
description = "Bot client for RustNet C&C framework"

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
